--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ a:visited {
 
 a:hover,
 a:focus {
-  color: #39b54a;
+  color: #D91604;
 }
 
 
@@ -339,7 +339,7 @@ ul.disc li::before {
   width: 8px;
   height: 8px;
   border-radius: 50%;
-  background: #39b54a;
+  background: #D91604;
   position: absolute;
   left: -17px;
   top: 11px;
@@ -348,7 +348,7 @@ ul.disc li::before {
 
 dt {
   margin: 0;
-  color: #39b54a;
+  color: #D91604;
 }
 
 dd {
@@ -519,7 +519,7 @@ td:last-child {
   right: 100%;
   height: 100%;
   width: 100%;
-  background: #39b54a;
+  background: #D91604;
 }
 
 .pace.pace-inactive {
@@ -780,8 +780,8 @@ button.button-primary,
 input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
-  background-color: #39b54a;
-  border-color: #39b54a;
+  background-color: #D91604;
+  border-color: #D91604;
   color: #FFFFFF;
 }
 
@@ -825,8 +825,8 @@ button.stroke,
 
 button.stroke:hover,
 .button.stroke:hover {
-  border: 0.3rem solid #39b54a;
-  color: #39b54a;
+  border: 0.3rem solid #D91604;
+  color: #D91604;
 }
 
 button.pill,
@@ -1052,7 +1052,7 @@ input::-moz-focus-inner {
 }
 
 .stats-tabs li a:hover {
-  color: #39b54a;
+  color: #D91604;
 }
 
 .stats-tabs li a em {
@@ -1125,8 +1125,9 @@ h1.intro-header::before {
 
 #header {
   width: 100%;
+  min-width: 100%;
   height: 72px;
-  background-color: #D91604;
+  background-color: #100340;
   position: fixed;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -1537,7 +1538,7 @@ h1.intro-header::before {
   content: "";
   width: 2px;
   height: 42px;
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: #D91604;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 12px;
@@ -1555,7 +1556,7 @@ h1.intro-header::before {
 .home-social-list li a:hover,
 .home-social-list li a:focus,
 .home-social-list li a:active {
-  color: #100340;
+  color: #D91604;
 }
 
 
@@ -1580,7 +1581,7 @@ h1.intro-header::before {
 
 .home-scrolldown a:hover,
 .home-scrolldown a:focus {
-  color: #44c455 !important;
+  color: #D91604 !important;
 }
 
 html[data-useragent*='MSIE 10.0'] .home-scrolldown,
@@ -1840,6 +1841,36 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
   overflow: hidden;
 }
 
+.app-slider-container {
+  max-width: 100%;
+  margin: auto;
+}
+
+.app-slider-container
+.slick-next::before,
+.slick-prev::before {
+  color: #D91604 !important;
+  font-size: 5rem !important;
+}
+
+.slick-prev {
+  left: 10px !important;
+  z-index: 99;
+}
+
+.slick-next {
+  right: 30px !important;
+  z-index: 99;
+}
+
+.title-gallery {
+  color: white !important;
+}
+
+#gallery .intro-header::before {
+  background-color: #D91604;
+}
+
 .about-intro {
   padding-bottom: 3.6rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.07);
@@ -1941,7 +1972,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
   line-height: 54px;
   text-align: center;
   border-radius: 50%;
-  background-color: #39b54a;
+  background-color: #D91604;
   box-shadow: 0 0 0 15px #ffffff;
   z-index: 500;
   position: absolute;
@@ -2150,12 +2181,12 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 .pricing-table .plan-block .plan-block-features li span {
-  color: #39b54a;
+  color: #D91604;
   font-family: "muli-bold", sans-serif;
 }
 
 .pricing-table .plan-block.primary {
-  background: #39b54a;
+  background: #D91604;
   color: rgba(255, 255, 255, 0.8);
 }
 
@@ -2184,7 +2215,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 .pricing-table .plan-block.primary .button.button-primary:hover,
 .pricing-table .plan-block.primary .button.button-primary:focus {
-  color: #39b54a;
+  color: #D91604;
 }
 
 .pricing-table .plan-bottom-part {
@@ -2266,21 +2297,21 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
  *
  * ------------------------------------------------------------------- */
 
-#testimonials {
+#team {
   background: #f5f5f5;
   padding: 15rem 0 9rem;
   text-align: center;
   min-height: 600px;
 }
 
-#testimonials h1::before {
+#team h1::before {
   left: 50%;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
 }
 
-#testimonials .owl-wrap {
+#team .owl-wrap {
   width: 80%;
   max-width: 900px;
   margin: 4.2rem auto 0;
@@ -2289,6 +2320,8 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 #testimonial-slider {
   margin: 0 0 3rem 0;
   position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 #testimonial-slider .slides {
@@ -2422,7 +2455,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 
 #testimonial-slider .owl-dots .owl-dot.active span,
 #testimonial-slider .owl-dots .owl-dot:hover span {
-  background-color: #39b54a;
+  background-color: #D91604;
 }
 
 
@@ -2454,7 +2487,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 @media only screen and (max-width: 600px) {
-  #testimonials .owl-wrap {
+  #team .owl-wrap {
     width: 90%;
   }
   #testimonial-slider p {
@@ -2463,7 +2496,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 @media only screen and (max-width: 400px) {
-  #testimonials .owl-wrap {
+  #team .owl-wrap {
     width: 100%;
   }
   #testimonial-slider p {
@@ -2683,8 +2716,8 @@ footer ul a:hover {
   top: 0;
   right: 0;
   color: #ffffff;
-  background: #39b54a;
-  border-color: #39b54a;
+  background: #D91604;
+  border-color: #D91604;
   border-radius: 0 .5rem .5rem 0;
   padding: 0 15px;
 }
@@ -2764,8 +2797,8 @@ footer ul a:hover {
   width: 60px;
   line-height: 60px;
   text-align: center;
-  background: black;
-  color: rgba(255, 255, 255, 0.5);
+  background: #D91604;
+  color: white;
   text-align: center;
   text-transform: uppercase;
   border-radius: 5px;
