--- a/css/main.css
+++ b/css/main.css
@@ -1143,7 +1143,7 @@ h1.intro-header::before {
 
 .header-logo {
   position: absolute;
-  left: 40px;
+  left: 35px;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
@@ -1295,6 +1295,7 @@ h1.intro-header::before {
 #header-nav-wrap .header-main-nav li a,
 #header-nav-wrap .header-main-nav li a:visited {
   color: rgba(255, 255, 255, 0.45);
+  font-size: 16px;
 }
 
 #header-nav-wrap .header-main-nav li a:hover,
@@ -1304,6 +1305,7 @@ h1.intro-header::before {
 
 #header-nav-wrap .header-main-nav li.current a {
   color: #ffffff;
+  font-size: 16px;
 }
 
 #header-nav-wrap .cta {
@@ -1331,9 +1333,9 @@ h1.intro-header::before {
 
 @media only screen and (max-width: 768px) {
   .header-logo a {
-    width: 88px;
-    height: 20px;
-    background-size: 88px 20px;
+    width: 50px;
+    height: 50px;
+    background-size: 50px;
   }
   #header-nav-wrap {
     display: none;
@@ -1341,7 +1343,7 @@ h1.intro-header::before {
     width: 100%;
     right: auto;
     left: 0;
-    background-color: #111111;
+    background-color: #100340;
     padding: 120px 40px 54px;
   }
   #header-nav-wrap .header-main-nav {
